Fix strange styling of input on mobile Safari

--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ input[type=button] {
     -o-transition-duration: 0.4s;
     -ms-transition-duration: 0.4s;
     transition-duration: 0.4s;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    appearance: none;
 }
 
 .discord-btn {
